--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </thead>
             <tbody>
                 <tr ng-repeat="product in products | filter: searchProduct | orderBy:'price'">
-                    <td>{{product.code}}</td>
+                    <td>{{product.code | productCode:'-'}}</td>
                     <td>{{product.description | uppercase}}</td>
                     <td>{{product.price | currency}}</td>
                     <td><img ng-src="img/{{product.picture}}" width="100px" height="100px" ></td>
