Cambios en el formulario de carga

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         <table border="1"> 
             <thead>
                 <tr>
-                    <th>Codigo</th>
-                    <th>Descripcion</th>
+                    <th>C&oacute;digo</th>
+                    <th>Descripci&oacute;n</th>
                     <th>Precio</th>
                     <th>Imagen</th>
                     <th>Notas</th>
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="product in products | filter: searchProduct | orderBy:'price'">
+                <tr ng-repeat="product in products | filter: searchProduct | orderBy:'price'" ng-if="product.active == true">
                     <td>{{product.code | productCode:'-'}}</td>
                     <td>{{product.description | uppercase}}</td>
                     <td>{{product.price | currency}}</td>
