--- a/index.html
+++ b/index.html
@@ -1,39 +1,22 @@
 <!doctype html>
 <html ng-app="stockApp">
   <head>
+    <!-- Load bootstrap -->
+    <link rel="stylesheet" href="styles/bootstrap.min.css">
+
     <script src="vendor/angular.min.js"></script>
+    <script src="vendor/angular-route.js"></script>
     <!-- AngularJS -->
     <script src="js/app.js"></script>
-    <script src="js/stock.js"></script>
-    <script src="js/filter.js"></script>
+    <script src="js/stock/stock.js"></script>
+    <script src="js/shared/filter.js"></script>
+    <script src="js/stock/directive.js"></script>
     <!-- Stylesheet  -->
     <link rel="stylesheet" href="styles/app.css">
   </head>
   <body>
-    <h2>Listado de Productos</h2>
-    <p>Buscar: <input type="text" ng-model="searchProduct"></p>
-    <div ng-controller="StockController">
-        <table border="1"> 
-            <thead>
-                <tr>
-                    <th>C&oacute;digo</th>
-                    <th>Descripci&oacute;n</th>
-                    <th>Precio</th>
-                    <th>Imagen</th>
-                    <th>Notas</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr ng-repeat="product in products | filter: searchProduct | orderBy:'price'" ng-if="product.active == true">
-                    <td>{{product.code | productCode:'-'}}</td>
-                    <td>{{product.description | uppercase}}</td>
-                    <td>{{product.price | currency}}</td>
-                    <td><img ng-src="img/{{product.picture}}" width="100px" height="100px" ></td>
-                    <td>{{product.notes  | myFormat}}</td>
-                </tr>      
-            </tbody>
-        </table>
-        <a href="add.html">Agregar producto</a>
-    </div>
+    <h2>Sistema de Stock</h2>
+
+    <div ng-view></div>
   </body>
 </html>
